--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "next": "^14.2.15",
     "prisma": "^5.20.0",
     "react-hot-toast": "^2.4.1",
     "rimraf": "^6.0.1",
