--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,19 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.22.0",
     "body-parser": "^1.20.3",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "helmet": "^7.1.0",
+    "express": "^4.21.1",
+    "helmet": "^7.2.0",
     "morgan": "^1.10.0",
-    "next": "^14.2.15",
-    "prisma": "^5.20.0",
+    "next": "^14.2.17",
+    "postgresql": "^0.0.1",
+    "prisma": "^5.22.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "rimraf": "^6.0.1",
     "vercel": "^37.8.0"
