--- a/inventoryfolder/package.json
+++ b/inventoryfolder/package.json
@@ -40,12 +40,6 @@
     "yup": "1.3.2"
   },
   "devDependencies": {
-    "@types/node": "20.10.0",
-    "@types/numeral": "2.0.5",
-    "@types/react": "18.2.39",
-    "@types/react-dom": "18.2.17",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
     "autoprefixer": "10.4.16",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
@@ -54,11 +48,10 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "postcss": "8.4.31",
     "prettier": "3.1.0",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.3.2"
+    "tailwindcss": "3.3.5"
   },
   "engines": {
-    "node": ">=18.17.0",
-    "npm": ">=9.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   }
 }
