--- a/inventoryfolder/package.json
+++ b/inventoryfolder/package.json
@@ -20,23 +20,32 @@
     "@mui/x-date-pickers": "6.18.3",
     "@reduxjs/toolkit": "1.9.7",
     "axios": "1.6.2",
+    "brace-expansion": "^2.0.1",
     "date-fns": "2.30.0",
+    "dom-helpers": "^3.4.0",
     "dotenv": "16.3.1",
+    "glob": "^7.2.3",
+    "isarray": "^1.0.0",
     "lucide-react": "0.294.0",
     "next": "14.0.3",
     "next-auth": "4.24.5",
     "numeral": "2.0.6",
+    "object-keys": "^0.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.11",
     "react-hook-form": "7.48.2",
     "react-hot-toast": "2.4.1",
+    "react-lifecycles-compat": "^3.0.4",
     "react-redux": "8.1.3",
     "recharts": "2.10.1",
     "redux-persist": "6.0.0",
+    "safe-buffer": "^5.2.1",
     "simplebar-react": "3.2.4",
+    "string_decoder": "^1.3.0",
     "uuid": "9.0.1",
     "xlsx": "0.18.5",
+    "yallist": "^4.0.0",
     "yup": "1.3.2"
   },
   "devDependencies": {
